# sub_volume_renderer

./: .gitignore  CLAUDE.md  FUTURE.md  KNOWLEDGE.md  NOTES.md  README.md  pyproject.toml
scripts/: analyze_boundary_behavior.py  analyze_out_of_bounds_access.py  background_loading.py  create_mouse_multiscale.py  create_platynereis_multiscale.py  debug_chunk_loading.py  main.py  mouse.py  multi_scale.py  platynereis.py
src/rbvr/: __init__.py  _geometry.py  _manager.py  _shader.py  _types.py  _wobject.py  _wrapping_buffer.py
src/rbvr/shaders/: fs_main.wgsl  raycast.wgsl  ring_buffer_volume_renderer.wgsl  sample_vol.wgsl  volume_common.wgsl
src/sub_volume/: __init__.py  _geometry.py  _manager.py  _material.py  _shader.py  _wobject.py  _wrapping_buffer.py
src/sub_volume/shaders/: fs_main.wgsl  hsv_selection.wgsl  raycast.wgsl  ring_buffer_volume_renderer.wgsl  sample_vol.wgsl  vs_main.wgsl
tests/: conftest.py  test_ring_buffer_volume_wrapping.py  test_volume_init.py
tests/basic_volume/: conftest.py  test_ring_buffer_volume_wrapping.py  test_volume_init.py  test_volume_texture_update.py
tests/ring_buffer_manager/: test_origin_init.py  test_world_coordinate_translation.py
tests/wrapping_buffer/: conftest.py  test_boundary_loading.py  test_can_load_logical_roi.py  test_load_into_buffer.py  test_load_logical_roi.py  test_subtract_rois.py  test_wrap_logical_roi_into_buffer_rois.py
